client/vite-project/src/components/home/Home.module.scss
.home__container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 80%;
    margin: 0 auto;
}

.home__text__container {
    margin-bottom: 3rem;
}

.home__heading {
    font-size: 4rem;
    font-weight: 400;
    text-align: center;
    margin-bottom: 0;

    &::after {
        content: '.';
        color: red;
        font-weight: bold;
    }

    &::first-letter {
        font-size: 5rem;
        font-weight: bold;
    }
}

.home__subheading {
    text-align: center;
    font-weight: 300;
    font-size: 1.2rem;
}

@media (max-width: 1000px) {
    .home__heading {
        // font-size: 2.5rem;
        line-height: 1;
    }

    .home__subheading {
        font-size: 1rem;
    }
}

